<resources>
    <string name="app_name">NaFila</string>
    <string name="select_image">SELECT IMAGE</string>
    <string name="hint_name">Name. Ex: Wilton Neto</string>
    <string name="update">UPDATE</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="line">LINE</string>
    <string name="search">search</string>
    <string name="see_line">see my line</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_forgot">Did you forget your password ?</string>
    <string name="login">LOGIN</string>
    <string name="or_login_with">OR SIGN IN WITH</string>
    <string name="initial_text">Get in the line of who you like, take part in this idea</string>
    <string name="register">REGISTER</string>
    <string name="watch_video">see ads (+5 points)</string>
    <string name="video_description">Points can be used to view someone from your line, or find out how many people there are in the line of your crush</string>
    <string name="news">NEWS</string>
    <string name="change_password">change password</string>
    <string name="terms_use">Terms of Use and Service</string>
    <string name="contact">contact us</string>
    <string name="log_out">Log Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="news_layout">News</string>
    <string name="news_description">Here are all the news related to your profile and your line.</string>
    <string name="hint_username">Username. Ex: neto_will</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="see_someone">LET\'S FIND OUT ANYONE FROM YOUR LINE?</string>
    <string name="see_someone_description">Lines are always anonymous, if you want to find someone in your line, just swap points to view.</string>
    <string name="get_in_line">GET IN LINE</string>
    <string name="see_line_other">UNLOCK LINE (- 20 Points)</string>
    <string name="match">Match</string>
    <string name="match_description_part1">"You and "</string>
    <string name="match_description_part2">" are in line with each other. How about taking a print of that image and sending it to your crush?"</string>
    <string name="search_by_user">Search by username:</string>
    <string name="search_hint">Ex: neto_will</string>
    <string name="no_user_found">No users found</string>
    <string name="nothing_here">Nothing yet ?</string>
    <string name="nothing_here_description">No news recorded</string>
    <string name="select_country">Select Country</string>
    <string name="alert_name">Fill in the name correctly</string>
    <string name="no_change">No verified changes</string>
    <string name="alert_user_name">Fill in the username correctly</string>
    <string name="in_my_line">" people in my line"</string>
    <string name="line_where_im">" lines where i'm"</string>
    <string name="alert_email">Fill in the email correctly</string>
    <string name="short_password">Very short password</string>
    <string name="alert_password">Password must be longer than 5 characters</string>
    <string name="alert_user_name2">Username must have more than 4 characters</string>
    <string name="alert_user_name3">There can be no whitespace in user name or quotation marks</string>
    <string name="alert_user_name4">Username already registered</string>
    <string name="alert_confirm_password">Passwords do not match</string>
    <string name="alert_image">Need to select image</string>
    <string name="alert_country">Need to select a country</string>
    <string name="alert_noone_line">You do not have anyone in your line.</string>
    <string name="all_already_seen">All line already seen</string>
    <string name="miss_points">Insufficient Points</string>
    <string name="count_other_line">" people in line of "</string>
    <string name="out_in_line">get out of line</string>
    <string name="notification_follower_titile">A new person in your line</string>
    <string name="notification_follower_text">We have news, do you want to discover your new suitor?</string>
    <string name="loading">LOADING DATA</string>
    <string name="notification_macth_titile">You have a macth with</string>
    <string name="notification_match_text">Match is when a person enters the queue of someone who had already entered the other\'s. We hope a story starts from there.</string>
    <string name="no_one_line">YOU STILL DO NOT HAVE ANYONE IN THE LINE.</string>
    <string name="all_seen">ALL OF THE LINE HAS ALREADY SEEN</string>
    <string name="show_up1">TO DISCOVER (-</string>
    <string name="show_up2">Points)</string>
    <string name="this_in_line">This user is on your line</string>
    <string name="points">POINTS</string>
    <string name="next_update">Available on next update</string>
    <string name="video_error">Failed to fetch ads. Try again later</string>
</resources>
