<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutSearch"
    android:layout_width="match_parent"
    android:background="@drawable/black_opacity"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/cornerSearch"
        android:layout_margin="20dp"
        android:padding="15dp"
        android:orientation="vertical"
        android:background="@drawable/corner_modal"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textAlignment="center"
            android:text="@string/search_by_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/inputUser"
            android:textAlignment="center"
            android:hint="@string/search_hint"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textErroSearch"
            android:visibility="gone"
            android:textColor="@android:color/holo_red_dark"
            android:textAlignment="center"
            android:textSize="11sp"
            android:text="@string/no_user_found"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnDoSearch"
            android:background="@drawable/corner_color"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:textColor="#fff"
            android:text="@string/search"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="40dp" />

    </LinearLayout>



</RelativeLayout>
